# pi_lib

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeListsStandalone.txt  Doxyfile  Makefile  README.md  adc.h  ads1115.h  audio-config.h  audio.c  audio.h  ble-cmd.h  ble.cpp  ble.h  call-every.c  call-every.h  canvas.cpp  canvas.h  canvas_png.h  digital-counter.c  digital-counter.cpp  digital-counter.h  display.h  file.c  file.h  global-trace.c  global-trace.h  gp-input.h  gp-output.h  gpio.c  gpio.h  grove.cpp  grove.h  i2c.cpp  i2c.h  io.h  l298n.h  light-sensor.cpp  light-sensor.h  (+73 more)
audio/: CMakeLists.txt  audio-buffer.h  audio-pi.cpp  audio-pi.h  audio-pico.cpp  audio-pico.h  audio-player.cpp  audio-player.h  audio.cmake  audio.h  talker-auto-gain.c  talking-skull-from-audio.cpp  talking-skull-from-audio.h  talking-skull-from-file.cpp  talking-skull-from-file.h  talking-skull.c  talking-skull.cpp  talking-skull.h  talking-skull.h.old  track.c  track.h  wav.cpp  wav.h
audio/include/: audio-buffer.h  audio-pi.h  audio-pico.h  audio-player.h  talking-skull-from-audio.h  talking-skull.h
core/: CMakeLists.txt  ads1115.h  axis-stepper.cpp  buffer.cpp  buffer.h  canvas-impl.cpp  canvas.cpp  console.cpp  console.h  consoles-impl.cpp  consoles.cpp  consoles.h  core-lock.cpp  core.cmake  debugger.h  digital-counter.h  display.h  file.c  file.h  global-trace.h  gp-input.h  gp-output.h  grove.cpp  grove.h  i2c.h  il9341.cpp  image-png.cpp  io.h  l298n.cpp  l298n.h  mcp23017.cpp  mcp23017.h  mem.c  mem.h  on-death.h  pca9685.cpp  pca9685.h  physics.cpp  pi-gpio.h  pi.h  (+19 more)
core/include/: adc.h  axis-stepper.h  buffer.h  canvas-impl.h  canvas.h  consoles.h  core-lock.h  display.h  fram-at24c.h  fram-mb85c.h  fram.h  gp-input.h  gp-output.h  grove.h  i2c.h  il9341.h  image-png.h  image.h  io.h  l298n.h  lights.h  mcp23017.h  mem.h  motor.h  neopixel-pico.h  pca9685.h  physics.h  pi-gpio.h  pi.h  reader.h  rotary-encoder.h  servo-gpio.h  spi.h  ssd1306.h  st7735s.h  st7796s.h  stdout-writer.h  stepper.h  string-utils.h  tb6612.h  (+2 more)
core/pi/: CMakeLists.txt  audio.h  call-every.c  canvas-png.cpp  canvas-png.h  digital-counter.cpp  file.c  i2c.cpp  image-png.cpp  maestro.c  maestro.h  neopixel-pi.cpp  neopixel-pi.h  nes.c  pi-gpio-pi-servo.c  pi-gpio-pi.c  pi-usb.c  pi.c  platform.cmake  spi.cpp  st7735s.cpp  st7735s.h  stop.c  talker-auto-gain.c  time-utils.c  track.c
core/pico/: CMakeLists.txt  call-every.c  deep-sleep.c  distance.cpp  file-platform.h  file.c  i2c.cpp  neopixel-pico.cpp  neopixel-pico.h  notes.h  pi-gpio-pico.c  pi.c  pico-adc.cpp  pico-notes.cpp  pico-servo.c  platform.cmake  spi.cpp  stdio-driver-reader.h  stdio-driver-writer.h  time-utils.c  tmc2209.cpp  uart-pio-rx.cpp  uart-pio-tx.cpp  uart-tx.cpp  uart.cpp  uart_rx.pio  uart_tx.pio  usb-reader.cpp  usb-writer.cpp
examples/: CMakeLists.txt  display-common.h
examples/a2dp-sink/: CMakeLists.txt
examples/a2dp-source/: CMakeLists.txt  a2dp-source.cpp
examples/adc/: CMakeLists.txt  adc.cpp
examples/digital-counter/: CMakeLists.txt  digital-counter.cpp
examples/display/: CMakeLists.txt  display.cpp
examples/distance/: CMakeLists.txt
examples/httpd/: CMakeLists.txt  httpd.cpp
examples/il9341/: CMakeLists.txt  il9341.cpp
examples/input-notifier/: CMakeLists.txt  input-notifier.cpp
examples/life/: CMakeLists.txt  life.cpp
examples/light-sensor/: CMakeLists.txt  light-sensor.cpp
examples/maestro/: CMakeLists.txt  maestro.c
examples/mcp23017/: CMakeLists.txt  mcp23017.cpp
examples/mqtt/: CMakeLists.txt  mqtt.cpp
examples/neopixel-pi/: CMakeLists.txt  neopixel-pi.cpp
examples/neopixel-pico/: CMakeLists.txt  neopixel-pico.cpp
examples/nes-dump/: CMakeLists.txt
examples/notes/: CMakeLists.txt  notes.cpp
examples/pico-battery/: CMakeLists.txt  pico-battery.cpp
examples/pico-rtc/: CMakeLists.txt
examples/rotary-encoder/: CMakeLists.txt  rotary-encoder.cpp
examples/rtos-test/: CMakeLists.txt  rtos-test.cpp
examples/servo/: CMakeLists.txt
examples/sntp/: CMakeLists.txt  sntp.c
examples/ssd1306/: CMakeLists.txt  ssd1306.cpp
examples/st7735s/: CMakeLists.txt  st7735s.cpp
examples/talking-skull/: CMakeLists.txt  laugh.h  talking-skull.cpp
examples/talking-skull-laugh/: CMakeLists.txt
examples/touchscreen/: CMakeLists.txt  touchscreen.cpp
examples/wav-play/: CMakeLists.txt  wav-play.cpp
net/: CMakeLists.txt  ble.cpp  ble.h  cyw43_config_pico.h  httpd-filesystem-handler.cpp  httpd-server.cpp  lwipopts-httpd.h  lwipopts.h  mongoose_config.h  mqtt.cpp  net-console.cpp  net-console.h  net-debugger.h  net-line-reader.c  net-line-reader.h  net-listener.cpp  net-listener.h  net-reader.cpp  net-writer.cpp  net-writer.h  net.c  net.cmake  net.h  pico-battery.c  server.c  server.h  sntp.c  sntp.h  wifi.c  wifi.h
net/bluetooth/: a2dp-sink.cpp  avrcp-connection.cpp  avrcp-connection.h  avrcp.cpp  avrcp.h  bluetooth.cmake  bluetooth.cpp  btstack_config.h  hid.cpp  junk.cpp  sbc-configuration.cpp  sbc-configuration.h  sbc-decoder.h  (+1 more)
pi/: CMakeLists.txt  canvas-png.cpp  i2c.cpp  maestro.c  nes.c  nes.h  pi.c  pico-slave.cpp  producer-consumer.c  talker-auto-gain.h  wb.h
pico/: CMakeLists.txt  light-sensor.h  pi-gpio-pico.c  pi.c  pico-audio.h  pico-notes.cpp  pico-slave.cpp
threads/: CMakeLists.txt  FreeRTOSConfig.h  digital-counter.cpp  digital-counter.h  lights.cpp  lights.h  pi-threads-c.cpp  pi-threads.h  producer-consumer.c  stepper.cpp  stop.c  threads-console.h  threads-debugger.h  threads.cmake  touchscreen-ft6336.cpp
utils/: .gitignore  CMakeLists.txt  Makefile  a2dp-sink.cpp  a2dp-source.cpp  adc.cpp  ble.cpp  digital-counter.c  digital-counter.cpp  distance.cpp  gp-input.cpp  httpd.cpp  input-notifier.cpp  life.cpp  light-sensor.cpp  maestro.c  mcp23017.cpp  neopixel-pi.cpp  neopixel-pico.cpp  nes-dump.c  notes.cpp  pico-audio.cpp  pico-rtc.c  pico-rtc.cpp  rotary-encoder.cpp  rtos-test.cpp  servo.cpp  sntp.c  ssd1306.cpp  st7735s.c  st7735s.cpp  talking-skull-dump.c  talking-skull-dump.cpp  talking-skull-laugh.cpp  talking-skull-prepare.c  talking-skull.cpp  wav-play.cpp  wb.c
(+172 files in other folders)
