project(examples)

include(../platform.cmake)

function(util_common targetName)
    project(${targetName})
    platform_executable(${targetName})
    target_link_libraries(${targetName} PRIVATE
      lib-pi
    )
    target_compile_definitions(${targetName} PUBLIC "CYW43_HOST_NAME=\"${targetName}\"")
endfunction()

function(util_c targetName)
    add_executable(${targetName} ${targetName}.c)
    util_common(${targetName} ${ARGN})
endfunction()

function(util_cpp targetName)
    add_executable(${targetName} ${targetName}.cpp)
    util_common(${targetName} ${ARGN})
endfunction()

if("${PLATFORM}" STREQUAL pico)
  if(HAVE_NETWORKING)
    add_subdirectory(a2dp-sink)
    add_subdirectory(a2dp-source)
    add_subdirectory(httpd)
    add_subdirectory(pico-rtc)
    add_subdirectory(sntp)
  endif()
  add_subdirectory(distance)
  add_subdirectory(light-sensor)
  add_subdirectory(neopixel-pico)
  add_subdirectory(notes)
  add_subdirectory(rtos-test)
else()
  add_subdirectory(httpd)
  add_subdirectory(maestro)
  add_subdirectory(neopixel-pi)
  add_subdirectory(nes-dump)
  add_subdirectory(sntp)
  add_subdirectory(st7735s)
endif()

add_subdirectory(adc)
add_subdirectory(digital-counter)
add_subdirectory(il9341)
add_subdirectory(input-notifier)
add_subdirectory(life)
add_subdirectory(mcp23017)
add_subdirectory(rotary-encoder)
add_subdirectory(talking-skull)
add_subdirectory(servo)
add_subdirectory(ssd1306)
add_subdirectory(wav-play)
