function(util_common targetName)
    platform_executable(${targetName})
    target_link_libraries(${targetName} PRIVATE
      lib-pi
    )
    target_compile_definitions(${targetName} PUBLIC "CYW43_HOST_NAME=\"${targetName}\"")
endfunction()

function(util_c targetName)
    add_executable(${targetName} ${targetName}.c)
    util_common(${targetName} ${ARGN})
endfunction()

function(util_cpp targetName)
    add_executable(${targetName} ${targetName}.cpp)
    util_common(${targetName} ${ARGN})
endfunction()

if("${PLATFORM}" STREQUAL pico)
  util_cpp(a2dp-sink)
  util_cpp(light-sensor)
  util_cpp(neopixel-pico)
  util_cpp(notes pi-audio)
  util_cpp(rtos-test)
  util_cpp(pico-rtc)
else()
  util_c(maestro)
  util_cpp(neopixel-pi)
  util_c(nes-dump)
  util_cpp(st7735s)
  util_cpp(talking-skull-dump)
endif()

util_cpp(adc)
util_cpp(digital-counter)
util_cpp(httpd)
util_cpp(input-notifier)
util_cpp(life)
util_cpp(mcp23017)
util_cpp(rotary-encoder)
util_cpp(talking-skull-laugh)
util_cpp(talking-skull)
util_cpp(servo)
util_c(sntp pi-threads)
util_cpp(ssd1306)
util_cpp(wav-play)
